Tue Sep 15 15:32:16 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (RDOCTARGET): the meaning of this macro was changed
	  at r24923.

Tue Sep 15 15:16:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (install-rdoc), configure.in (RDOCTARGET): removed
	  circular dependency.  [ruby-dev:39339]

Tue Sep 15 10:48:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (install-all): target to install all.

	* instruby.rb: merged from trunk.

Tue Sep 15 04:25:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RDOCTARGET): use install-all.  [ruby-dev:39334]

Mon Sep 14 11:23:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, common.mk, */configure.bat (rdoc): make before
	  install if rdoc is enabled.  [ruby-dev:39325]

Mon Sep 14 11:10:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (check-ruby): run all test of ruby itself.

Mon Sep 14 07:30:56 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/cgi/cookie.rb (value): Keep CGI::Cookie#value in sync with the
	  cookie itself. A patch by Arthur Schreiber [ruby-core:17634]

Mon Sep 14 04:57:27 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/irb/ext/multi-irb.rb: Fix arguments handling for shell commands
	  in irb; a patch by Yusuke Endoh [ruby-dev:35075]

Sun Sep 13 22:13:35 2009  Tanaka Akira  <akr@fsij.org>

	* lib/tempfile.rb (Tempfile::Remover): new class to replace
	  Tempfile.callback.  [ruby-core:17824] [ruby-dev:39271]
	  See [ruby-dev:39317] for the reason.

Sun Sep 13 11:06:12 2009  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (OpenURI::Meta#content_type_parse): strip quotes.

Sun Sep 13 01:55:32 2009  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (URI::FTP#buffer_open): fix the %2F handling.

	* lib/open-uri.rb (URI::FTP#buffer_open): use the port specified in
	  the URI.

Sat Sep 12 13:29:58 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>
